--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </div>
 
     <div id="main-container">
-        <div id="featured-image"><img src= 본인사진넣기></div>
+        <div id="featured-image"><img src= ![KakaoTalk_20240613_002727938](https://github.com/kimhyeonjin429/kimhyeonjin429.github.io/assets/169958533/7f72b579-0e73-4b48-a52c-f92cb1f73bdb)
+></div>
 
         <div id="main-text">
             <p>
