--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="main-container">
-        <div id="featured-image"><img src=https://github.com/kimhyeonjin429/kimhyeonjin429.github.io/issues/1></div>
+        <div id="featured-image"><img src=![KakaoTalk_20240613_002727938](https://github.com/kimhyeonjin429/kimhyeonjin429.github.io/assets/169958533/1a4193d5-3b64-4355-bc50-bfe7fdc49bcf)></div>
 
         <div id="main-text">
             <p>
