--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 본인 유튜브 채널 개설, 콘텐츠 촬영, 영상 편집</p>
         </div>
 
-        <div id="copyright">Copyright &copy; 2023 DXD</div>
+        <div id="copyright">22103462 김현진</div>
     </div>
 </body>
 </html>
