--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
         </div>
 
-        <div id="copyright">Copyright &copy; 2023 DXD</div>
+        <div id="copyright">22103462 김현진</div>
     </div>
 </body>
 </html>
