--- a/about.html
+++ b/about.html
@@ -22,8 +22,12 @@
         <div id="main-text">
             <p>
                 <a href = https://www.youtube.com/@kimstar_><p><b>YOUTUBE LINK</b></p></a> 
-                유튜브 관련된 내용 <br>
-                영상 링크하기
+                현재는 학교 생활에 의해 크게 활동을 하고 있지 않다.<br>
+                하지만 종강을 하고 나면 쌓아둔 영상부터 차근차근 편집해 업로드 할 예정이다. <br>
+                쌓아둔 영상으로는 제주도 2박 3일 vlog, 메이크업 영상 등이 있다. <br>
+                추천영상 ↓ <br>
+                https://www.youtube.com/watch?v=YInavpQg-kw
+                
             </p>
 
         </div>
