--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 하지만 종강을 하고 나면 쌓아둔 영상부터 차근차근 편집해 업로드 할 예정이다. <br>
                 쌓아둔 영상으로는 제주도 2박 3일 vlog, 메이크업 영상 등이 있다. <br>
                 추천영상 ↓ <br>
-                https://www.youtube.com/watch?v=YInavpQg-kw
+                <a href =https://www.youtube.com/watch?v=YInavpQg-kw><p><b>이곳을 클릭해보세요</b></p></a>
                 
             </p>
 
